Adding soe changes

--- a/Mision_to_Mars/Template/index.html
+++ b/Mision_to_Mars/Template/index.html
@@ -40,7 +40,7 @@
           </div>
           <div>
             <h3 style="color:rgb(134, 16, 81); font-family:Impact">Mars Facts</h3>
-            <table>{{ data.html_table|safe}}</table>
+            <table>{{ data.mars_facts|safe}}</table>
           </div>
         </div>
 
