--- a/Mision_to_Mars/Template/index.html
+++ b/Mision_to_Mars/Template/index.html
@@ -1,93 +1,86 @@
-<!DOCTYPE html>
-<html>
 
 <head>
-  <title>Mission to Mars</title>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Hot Finds</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  </head>
+  
 
-<body class='text-white' style="background-color:rgb(19, 3, 44);">
+<body class="text-white" style="background-color:rgb(0, 102, 128);">
   <div class="container">
 
-    <!-- Jumbotron -->
-    <div class="jumbotron text-center"
-      style="background-image: url(https://p4.wallpaperbetter.com/wallpaper/324/605/138/no-man-s-sky-no-man-s-sky-next-video-games-space-wallpaper-5826bdf8f0c02cc8107c31be8882a45a.jpg); background-size: 100%; height: 100%;">
-      <h1 style="font-family:Impact;color:navy;font-size: 70px;" class="display-4;">Mission to Mars</h1>
-      <a class="btn btn-lg text-white" style="background-color:#5e0925;" href="/scrape_mars.py" role="button">Scrape New Data</a>
-    </div>
-
-    <!---News scraping-->
-    <div class="container">
-      <h2 style="color:rgb(184, 196, 27); font-family:Impact">Latest Mars News</h2>
-      <h4 style="color:rgb(121, 23, 6)">{{data.news_titles[0]}}</h4>
-      <p>{{data.news_p[0]}}</p>
-    </div>
-
-    <!---Featured Image-->
-    <div class="container">
-      <div class='row'>
-        <div class="col-lg-8 col-md-8 col-sm-6 col-xm-12">
-          <h3 style="color:rgb(207, 92, 10);font-family:Impact;text-align: center;">Featured Mars Image</h3>
-          <img src="{{data.featured_image_url}}" style="max-width:100%;" alt="mars image">
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xm-12">
-          <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-            <div class="card-header">Current Weather on Mars</div>
-            <h5 class="card-title"> </h5>
-            <p class="card-text">{{data.mars_weather}}</p>
-          </div>
-          <div>
-            <h3 style="color:rgb(134, 16, 81); font-family:Impact">Mars Facts</h3>
-            <table>{{ data.mars_facts|safe}}</table>
-          </div>
-        </div>
-
+      <!-- Jumbotron -->
+      <div class="jumbotron text-center">
+        <h1>Mission to Mars</h1>
+        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
-    </div>
 
-    <!---CONTAINTER CLOSE-->
-
-
-
-    <br>
-    <h1 style="padding-top:30px; padding-bottom: 30px; text-align: center; color:rgb(167, 167, 79);font-family:Impact;">
-      Mars Hemispheres</h1>
-
-  </div>
-  <!---body->container closed-->
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-12">
-            <h3> {{data.hemisphere_image_urls[0]["title"]}} </h3>
-            <img src={{data.hemisphere_image_urls[0]["img_url"]}} style="max-width:100%;
-             height:auto;" />
-          </div>
-          <div class="col-md-12">
-            <h3> {{data.hemisphere_image_urls[1]["title"]}} </h3>
-            <img src={{data.hemisphere_image_urls[1]["img_url"]}} style="max-width:100%;
-             height:auto;" />
-          </div>
-        </div>
+      <!-- News Section -->
+      <div class="container">
+          <h3>Latest Mars News</h3>
+          <h6 style="color: #c1440e">{{ mars_info.news_title }}</h6>
+          <p>{{ mars_info.news_p }}</p>
       </div>
-      <div class="col-md-6">
-        <div class="row">
+
+      <div class="container">
+          <div class="row">
+              <!-- Left Image-->
+              <div class="col-lg-8 col-md-8 col-sm-12">
+                  <h3>Featured Mars Image</h3>
+                  <img src="{{ mars_info.featured_image_url }}" style="max-width:100%; max-height: auto;" alt="Mars Featured Image">
+              </div>
+
+              <!-- Weather Card -->
+              <div class="col-lg-4 col-md-4 col-sm-12">
+
+                  <div class="card" style="width: 18rem;">
+                      <div class="card-body text-white bg-dark">
+                          <h6 class="card-title">Current Weather on Mars</h6>
+                          <p class="card-text">{{ mars_info.mars_weather }}</p>
+                      </div>
+
+                  </div>
+
+                  <!-- Table -->
+                  <br>
+                  <h3>Mars Facts</h3>
+                  <div style="max-width: 450px; max-height: 150px; font-size: 15px; margin-bottom: 65px;">
+                      {{ mars_info.mars_facts|safe}}
+                  </div>
+              </div> <!-- col4 -->
+          </div><!-- Row -->
+      </div><!-- Container -->
+
+      <!-- Cards -->
+      <h3 style="padding-top: 50px; margin-top: 100px; text-align: center;">Mars Hemispheres</h3>
+      <div class="card-deck">
+          <hr>
           <div class="col-md-12">
-            <h3> {{data.hemisphere_image_urls[2]["title"]}} </h3>
-            <img src={{data.hemisphere_image_urls[2]["img_url"]}} style="max-width:100%;
-             height:auto;" />
+              <div class="row">
+                  {% for item in mars_info.hemispheres %}
+                  <div class="col-md-6">
+                      <div class="card text-white bg-dark" style="margin: 30px;">
+                          <img class="card-img-top" src="{{ item.img_url }}" />
+                          <div class="card-body">
+                              <p class="card-text">{{ item.title }}</p>
+                          </div>
+                      </div>
+                  </div>
+                  {% endfor %}
+              </div>
           </div>
-          <div class="col-md-12">
-            <h3> {{data.hemisphere_image_urls[3]["title"]}} </h3>
-            <img src={{data.hemisphere_image_urls[3]["img_url"]}} style="max-width:100%;
-             height:auto;" />
-          </div>
-        </div>
-      </div>
-    </div>
+      </div><!-- Close main container -->
+
+      <!-- Bootstrap JS -->
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+          crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+          crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+          crossorigin="anonymous"></script>
+
 </body>
 
 </html>
